[gd_scene load_steps=6 format=3 uid="uid://b3e0yr0qemq0v"]

[ext_resource type="Script" uid="uid://mtnb3bgyc2nc" path="res://scripts/DragItem/window_dragItem.gd" id="1_xbd1y"]
[ext_resource type="Script" uid="uid://12lp7r35284b" path="res://scripts/deployableItem.gd" id="2_ij6kp"]
[ext_resource type="Script" uid="uid://cy8odl4tqbg5l" path="res://scripts/settingsMenu.gd" id="3_ij6kp"]
[ext_resource type="Texture2D" uid="uid://cekoi47xae08g" path="res://sprites/exit_button.png" id="4_2qp4v"]
[ext_resource type="Script" uid="uid://d2f3erc3p307k" path="res://scripts/windowUtils.gd" id="5_vdc3b"]

[node name="DeployableWindowBase" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xbd1y")
hasTextContent = false

[node name="DeployableItem" type="Node" parent="."]
script = ExtResource("2_ij6kp")
metadata/_custom_type_script = "uid://12lp7r35284b"

[node name="SettingsMenu" type="Node" parent="."]
script = ExtResource("3_ij6kp")
metadata/_custom_type_script = "uid://cy8odl4tqbg5l"

[node name="Panel" type="ColorRect" parent="." groups=["brightnessModeAffected"]]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
color = Color(0.75686276, 0.75686276, 0.75686276, 0.7411765)

[node name="Header" type="RichTextLabel" parent="Panel" groups=["brightnessModeAffected"]]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 165.0
offset_bottom = 29.0
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "> Settings"
scroll_active = false

[node name="ExitButton" type="TextureButton" parent="Panel"]
self_modulate = Color(0.78039217, 0.78039217, 0.78039217, 1)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 35.0
grow_horizontal = 0
texture_normal = ExtResource("4_2qp4v")
ignore_texture_size = true
stretch_mode = 0

[node name="WindowUtils" type="Node" parent="Panel/ExitButton"]
script = ExtResource("5_vdc3b")
metadata/_custom_type_script = "uid://d2f3erc3p307k"

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 292.0
offset_bottom = 190.0
color = Color(0.3515629, 0.3515629, 0.35156286, 1)

[node name="DarkModeCheckbox" type="CheckButton" parent="Panel/ColorRect"]
layout_mode = 0
offset_right = 133.0
offset_bottom = 31.0
text = "Dark Mode"

[node name="MuteCheckbox" type="CheckButton" parent="Panel/ColorRect"]
layout_mode = 0
offset_top = 20.0
offset_right = 152.0
offset_bottom = 51.0
text = "Mute Volume"

[node name="VolumeGroup" type="Control" parent="Panel/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -134.0
offset_top = -100.0
offset_right = 134.0
grow_horizontal = 2
grow_vertical = 0

[node name="HSlider" type="HSlider" parent="Panel/ColorRect/VolumeGroup"]
layout_mode = 1
offset_top = 24.0
offset_right = 200.0
offset_bottom = 40.0
max_value = 8.0
step = 0.2

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/ColorRect/VolumeGroup"]
layout_mode = 1
offset_right = 200.0
offset_bottom = 30.0
text = "Master Volume"
scroll_active = false

[connection signal="mouse_entered" from="Panel/ExitButton" to="Panel/ExitButton/WindowUtils" method="MouseEnterHighlight"]
[connection signal="mouse_exited" from="Panel/ExitButton" to="Panel/ExitButton/WindowUtils" method="MouseExitHighlight"]
[connection signal="pressed" from="Panel/ExitButton" to="DeployableItem" method="ReturnIcon"]
